--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^3.4.2",
     "dompurify": "^2.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "faker": "^4.1.0",
+    "html-to-text": "^5.1.1",
     "mongoose": "^5.9.4",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
